--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,10 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.USE_EXACT_ALARM"/>
     <application
         android:name=".BamBooApplication"
@@ -23,8 +26,10 @@
         <activity
             android:name=".presentation.view.SuaActivity"
             android:exported="false"
-            android:label="@string/title_activity_sua"
-            android:theme="@style/Theme.BamBoo" />
+            android:theme="@style/Theme.BamBoo"
+            android:showWhenLocked="true"
+            android:turnScreenOn="true"
+            android:launchMode="singleTask"/>
 
         <activity
             android:name=".presentation.view.MainActivity"
