--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -60,4 +60,5 @@ androidx-hilt-work = { group = "androidx.hilt", name = "hilt-work", version.ref 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
