--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BamBoo"
         tools:targetApi="31">
+
         <provider
             android:name="androidx.startup.InitializationProvider"
             android:authorities="${applicationId}.androidx-startup"
@@ -34,6 +35,7 @@
             android:exported="false"
             android:label="@string/title_activity_main_appointment_notify"
             android:theme="@style/Theme.BamBoo" />
+
         <activity
             android:name=".presentation.view.notifyView.MainNotifyMedication"
             android:exported="false"
@@ -41,29 +43,42 @@
             android:showWhenLocked="true"
             android:theme="@style/Theme.BamBoo"
             android:turnScreenOn="true" />
+
         <activity
             android:name=".presentation.navigation.MainNavController"
             android:exported="true"
             android:theme="@style/Theme.BamBoo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver
-            android:name=".domain.alarmManager.background_tasks.AlarmSchedulesFalse"
-            android:exported="true"
-            android:enabled="true" />
 
         <receiver
+            android:name=".domain.alarmManager.background_tasks.AlarmSchedulesFalse"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
+            </intent-filter>
+        </receiver>
+        <receiver
             android:name=".domain.alarmManager.notifications.medication.AlarmReceiver"
-            android:exported="true"
-            android:permission="android.permission.RECEIVE_BOOT_COMPLETED" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
+            </intent-filter>
+        </receiver>
         <receiver
             android:name=".domain.alarmManager.notifications.appointment.AlarmAppointmentReceiver"
-            android:exported="true"
-            android:permission="android.permission.RECEIVE_BOOT_COMPLETED" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
